# dwm-statusbar

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  config.hpp  module.hpp  status  status.cpp
